--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Ecosystem</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
