--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 
   <canvas id="canvas"></canvas>
 
+  <script src="https://silverspace505.github.io/basic/ui.js"></script>
+  <script src="https://silverspace505.github.io/basic/input.js"></script>
+  <script src="https://silverspace505.github.io/basic/utils.js"></script>
+
   <script src="data.js"></script>
-  <script src="input.js"></script>
   <script src="net.js"></script>
   <script src="sprites.js"></script>
   <script src="script.js"></script>
