--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <canvas id="canvas"></canvas>
 
-  <script src="https://silverspace505.github.io/basic/ui.js"></script>
-  <script src="https://silverspace505.github.io/basic/input.js"></script>
-  <script src="https://silverspace505.github.io/basic/utils.js"></script>
+  <script src="https://silverspace.online/basic/ui.js"></script>
+  <script src="https://silverspace.online/basic/input.js"></script>
+  <script src="https://silverspace.online/basic/utils.js"></script>
 
   <script src="data.js"></script>
   <script src="net.js"></script>
